completed card section with responsive

--- a/index.html
+++ b/index.html
@@ -55,14 +55,77 @@
 
 
 
-
-
-
-
-
-
-
-
     </main>
+
+<!--Card Section-->
+
+    <section class="our-plants">
+        <div class="our-plants-main-title">
+            <h1 class="our-plants-title"><span class="our">Our</span> Plants</h1>
+            <p class="our-plants-paragraph">Indulge your senses with the beauty and fragrance of
+                 our fresh flower shop. From<br> classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+        </div>
+<!--Card--->
+        <div class="card-section">
+            <div class="card">
+            <img class="card-img" src="./assets/sample-flower-image.png" alt="">
+            <h3 class="lily">Lily Blossom</h3>
+            <h3 class="usd">20 USD</h3>
+            <button class="btn-primary">ADD TO CART</button>
+            </div>
+            <!--Card--->
+            <div class="card">
+            <img class="card-img" src="./assets/sample-flower-image.png" alt="">
+            <h3 class="lily">Lily Blossom</h3>
+            <h3 class="usd">20 USD</h3>
+            <button class="btn-primary">ADD TO CART</button>
+            </div>
+            <!--Card--->
+            <div class="card">
+            <img class="card-img" src="./assets/sample-flower-image.png" alt="">
+            <h3 class="lily">Lily Blossom</h3>
+            <h3 class="usd">20 USD</h3>
+            <button class="btn-primary">ADD TO CART</button>
+            </div>
+            <!--Card--->
+            <div class="card">
+            <img class="card-img" src="./assets/sample-flower-image.png" alt="">
+            <h3 class="lily">Lily Blossom</h3>
+            <h3 class="usd">20 USD</h3>
+            <button class="btn-primary">ADD TO CART</button>
+            </div>
+            <!--Card--->
+            <div class="card">
+            <img class="card-img" src="./assets/sample-flower-image.png" alt="">
+            <h3 class="lily">Lily Blossom</h3>
+            <h3 class="usd">20 USD</h3>
+            <button class="btn-primary">ADD TO CART</button>
+            </div>
+            <!--Card--->
+            <div class="card">
+            <img class="card-img" src="./assets/sample-flower-image.png" alt="">
+            <h3 class="lily">Lily Blossom</h3>
+            <h3 class="usd">20 USD</h3>
+            <button class="btn-primary">ADD TO CART</button>
+            </div>
+            <!--Card--->
+            <div class="card">
+            <img class="card-img" src="./assets/sample-flower-image.png" alt="">
+            <h3 class="lily">Lily Blossom</h3>
+            <h3 class="usd">20 USD</h3>
+            <button class="btn-primary">ADD TO CART</button>
+            </div>
+            <!--Card--->
+            <div class="card">
+            <img class="card-img" src="./assets/sample-flower-image.png" alt="">
+            <h3 class="lily">Lily Blossom</h3>
+            <h3 class="usd">20 USD</h3>
+            <button class="btn-primary">ADD TO CART</button>
+            </div>
+            
+            
+
+        </div>
+    </section>
 </body>
 </html>
