--- a/index.html
+++ b/index.html
@@ -127,5 +127,23 @@
 
         </div>
     </section>
+
+    <main class="challange-part">
+        <div class="plants-lover">
+            <img class="flower-shop" src="./assets/flower-store.png" alt="">
+            <img class="circle-star" src="./assets/trusted-badge.png" alt="">
+        </div>
+        <div class="plants-lover-column-text">
+            <h1 class="lover-h1">Flower & Plants<br> Lover</h1>
+            <ul class="column-paragraph">
+                <li>Indulge your senses with the beauty and<br> fragrance of our fresh flower shop.
+                     From classic<br> roses to exotic blooms, we offer a wide variety<br> of fresh.</li>
+                <li>Indulge your senses with the beauty and<br> fragrance of our fresh flower shop.
+                     From classic<br> roses to exotic blooms, we offer a wide variety<br> of fresh.</li>
+                <li>Indulge your senses with the beauty and<br> fragrance of our fresh flower shop.
+                     From classic<br> roses to exotic blooms, we offer a wide variety<br> of fresh.</li>
+            </ul>
+        </div>
+    </main>
 </body>
 </html>
