added plants lover with responsive

--- a/index.html
+++ b/index.html
@@ -134,14 +134,14 @@
             <img class="circle-star" src="./assets/trusted-badge.png" alt="">
         </div>
         <div class="plants-lover-column-text">
-            <h1 class="lover-h1">Flower & Plants<br> Lover</h1>
+            <h1 class="lover-h1">Flower & Plants<br class="hide-br"> Lover</h1>
             <ul class="column-paragraph">
-                <li>Indulge your senses with the beauty and<br> fragrance of our fresh flower shop.
-                     From classic<br> roses to exotic blooms, we offer a wide variety<br> of fresh.</li>
-                <li>Indulge your senses with the beauty and<br> fragrance of our fresh flower shop.
-                     From classic<br> roses to exotic blooms, we offer a wide variety<br> of fresh.</li>
-                <li>Indulge your senses with the beauty and<br> fragrance of our fresh flower shop.
-                     From classic<br> roses to exotic blooms, we offer a wide variety<br> of fresh.</li>
+                <li>Indulge your senses with the beauty and<br class="hide-br"> fragrance of our fresh flower shop.
+                     From classic<br class="hide-br"> roses to exotic blooms, we offer a wide variety<br class="hide-br"> of fresh.</li>
+                <li>Indulge your senses with the beauty and<br class="hide-br"> fragrance of our fresh flower shop.
+                     From classic<br class="hide-br"> roses to exotic blooms, we offer a wide variety<br class="hide-br"> of fresh.</li>
+                <li>Indulge your senses with the beauty and<br class="hide-br"> fragrance of our fresh flower shop.
+                     From classic<br class="hide-br"> roses to exotic blooms, we offer a wide variety<br class="hide-br"> of fresh.</li>
             </ul>
         </div>
     </main>
