added all section

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 
                 <img src="./assets/deal-ana.png" alt="">
                 <div class="text-overlay-2">
-                    <h3 class="image-grid-1-title">30% Off | Ana  Plant</h3>
+                    <h3 class="image-grid-2-title">30% Off | Ana  Plant</h3>
                     <a href="ancor" class="image-grid-2-paragraph">Shop Now</a>
                 </div>
                 
@@ -207,6 +207,91 @@
         </div>
     </section>
 </main>
+
+<footer>
+
+<section class="footer-img-section">
+    <div class="overlay-all">
+        <h2 class="text-h2">Join the colorful Bunch</h2>
+        <form class="subscribe-form" action="#" method="post">
+            <input type="email" placeholder="write email" required />
+            <button type="submit">Subscribe</button>
+        </form>
+    </div>
+</section>
+
+
+
+<!--footer-end-->
+
+
+
+<section class="footer-down">
+
+
+    <div class="logo-columnn">
+        <img src="./assets/logo.png" alt="">
+        <p class="footer-parag">Indulge your senses with the<br> beauty and
+             fragrance of our fresh<br> flower shop. </p>
+    </div>
+
+
+
+    <div class="input-ancor-buttons">
+        <ul>
+               <li><a href="#" class="home-link">Home</a></li>
+                <li><a href="#" class="aboutus-link">About us</a></li>
+                <li><a href="#" class="home-link">Blog</a></li>
+                <li><a href="#" class="shop-link">FAQ</a></li>
+                <li><a href="#" class="shop-link">Contact Us</a></li>
+        </ul>
+    </div>
+
+
+    <div class="lists-items">
+        <ul>
+        <li>Features</li>
+        <li>Pricing</li>
+        <li>Privacy policy</li>
+        <li>terms of Service</li>
+        <li>Help center</li>
+        </ul>
+
+
+    </div>
+
+
+    <div class="brand-logo">
+        <img src="./assets/icon-linkedin.png" alt="">
+        <img src="./assets/icon-twitter.png" alt="">
+        <img src="./assets/icon-facebook.png" alt="">
+        <img src="./assets/icon-youtube.png" alt="">
+
+
+    </div>
+</section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+</footer>
+
 
 
 
